[metadata]
name = SkeKraft
version = 0.0.1
author = Ulrik Sannsell
author_email = ulrik@sannsell.se
description = Skellefteå Kraft API package
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://gitlab.com/veulsan/energiinfo
project_urls =
    Bug Tracker = https://gitlab.com/veulsan/api-skekraft/-/issues
    repository = https://gitlab.com/veulsan/energapi-skekraft
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src